<resources>
    <string name="app_name">NearBy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_check_for_neighbors">Check for Neighbors</string>
    <string name="text_default_status_negative">Default Status : negative</string>
    <string name="text_have_an_account">Have an account ?</string>
    <string name="text_save">Save</string>
    <string name="text_user_name">User Name</string>
    <string name="text_login">Login</string>
    <string name="text_remember_me">Remember Me</string>
    <string name="text_create_new_account">Create new Account</string>
    <string name="text_infected_corona">Infected Corona</string>
    <string name="text_save_status">Save Status</string>
    <string name="text_history_with_neighbour">History with Neighbour</string>
    <string name="btn_login">Login</string>
    <string name="text_email">Email</string>
    <string name="text_bluetoothsettings">In order to register, Bluetooth MAC Address is needed. You can find your Bluetooth Mac address under About/Status, settings</string>
    <string name="text_go_to_settings">Go to Settings</string>
    <string name="txt_cancel">Cancel</string>
    <string name="title_activity_near_by_connect">NearByConnectActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="long_message">Are you sure!</string>
</resources>